# slopyfy

./: .gitignore  PLAN.md  README.md  package.json  readme.md
agent/: agent.py  app-2.py  app.py  generate_assets.py  pyproject.toml
docs/: ARCHITECTURE_ROLE_MAPPING.md  DEMO_PLAN_AI_AGENT_FIRST_WEBSITE.md  HOW_TO_RENDER_A_PRODUCT_CARD_IN_CHAT.md  MCP_APPS_HOST_DECISION.md
frontend/: LIVE_FILTERING_PROGRESS.md  VOICE_FILTERING_PLAN.md  package-lock.json  package.json
frontend/app/: ChatShell.tsx  globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/live-filtering/: layout.tsx  page.tsx
frontend/components/live-filtering/: LiveFilteringDemo.tsx
frontend/lib/: catalog.ts
frontend/lib/live-filtering/: filterProducts.ts  parseLiveFilters.ts  shouldUseFallback.ts  types.ts
mcp/: MCP_UI_HTML_RENDERING.md  README.md  package-lock.json
mcp/src/: data.ts  httpServer.ts  mcp.ts
src/: client.ts  server.ts
state-client-v2/: .example.env  package-lock.json  package.json
state-client-v2/app/: client.tsx  data.ts  page.tsx  style.css
state-client-v2/app/api/copilotkit/: route.ts
state-client-v2/app/api/transcribe/: route.ts
state-client-v2/app/components/: HomeView.tsx
state-client/app/: client.tsx  copilot-provider.tsx  data.ts  globals.css  layout.tsx  page.tsx  style.css
state-client/app/adults/: page.tsx
state-client/app/api/copilotkit/: route.ts
state-client/app/components/: HomeView.tsx
state-client/app/kids/: page.tsx
state-client/public/generated-assets/: product_descriptions.json
(+4 files in other folders)
