[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-strands>=0.1.1",
    "boto3>=1.40.0",
    "fastapi>=0.134.0",
    "strands-agents>=1.28.0",
    "strands-agents-tools>=0.2.21",
    "uvicorn>=0.41.0",
]
